# Estate-Hunter

./: Dockerfile  README.md  app.py  pyproject.toml
scrapper/: __init__.py  common.py  housekg.py  lalafo.py
settings/: settings.py
