[tool.poetry]
name = "estate-hunter"
version = "0.1.0"
description = "Estate Hunter is a program that collects real estate data from various websites on a daily basis and selectively sends this data to a user via the Telegram API in accordance with their preferences. The program also automatically deletes outdated data."
authors = ["Suvan <overmind77s@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
